--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,11 @@
 		"context": "..",
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile",
-		"target": "externalbrowser"
+		"target": "externalbrowser:latest"
 	},
-	"runArgs": ["--env-file",".env"],
+  "runArgs": ["--env-file",".env"],
+	"overrideCommand": false
+
 	// Will needed uncommented for M1s
 	// "--platform=linux/arm64/v8"],
 
@@ -31,4 +33,5 @@
 
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "devcontainer"
+
 }
