Use the forked snowflake-connector-python from github

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 		"target": "externalbrowser:latest"
 	},
   "runArgs": ["--env-file",".env"],
-	"overrideCommand": false
+	"overrideCommand": false,
 
 	// Will needed uncommented for M1s
 	// "--platform=linux/arm64/v8"],
@@ -19,7 +19,7 @@
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [3035]
 
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "poetry install",
